# 7-useful_habits

./: .env.sample  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_options_alter_habit_associated_habit_and_more.py  0004_alter_habit_prize_alter_habit_time.py  0005_alter_habit_time.py  0006_habit_next_day_to_do_alter_habit_period_and_more.py  0007_alter_habit_time.py  0008_alter_habit_time.py  0009_alter_habit_time.py
today_data/: today_habit.json
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
